--- a/index.html
+++ b/index.html
@@ -157,13 +157,10 @@
             <div  class="row"  ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'" style="margin-bottom:20px;">
               <div class="card-deck">
                 <div ng-repeat="ProductCardsItem in value" class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
-                  <div class="card">
+                  <div style="height:300px" class="card">
                     <img class="card-img-top" ng-src="{{ProductCardsItem.CATIMAGE}}" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">{{ProductCardsItem.NAME}}</h5>
-                    </div>
-                    <div class="card-footer">
-                      <a ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" href="#" class="btn btn-secondary btn-green">+ See more</a>
+                      <a ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" href="#"><h5 class="card-title">{{ProductCardsItem.NAME}}</h5></a>
                     </div>
                   </div>
                 </div>
