--- a/products.html
+++ b/products.html
@@ -206,9 +206,7 @@
 												<div class="col-md-6">
 													<h5> {{ProductCardsItem.NUM}} </h5>
 													<ul class="list-square">
-														<li>{{ProductCardsItem.WIDTH}}</li>
-														<li>{{ProductCardsItem.HEIGHT}}</li>
-														<li>{{ProductCardsItem.WEIGHT}}</li>
+														<li>{{ProductCardsItem.DESCRIPTION}}</li>
 													</ul>
 
 												</div>
