--- a/products.html
+++ b/products.html
@@ -313,5 +313,8 @@
 <!-- Librería de controlador principal -->
 <script src="js/controller.js"></script>
 
+<div dw-loading="myloading" dw-loading-options="{text: 'Working...'}">
+</div><!-- ./loading -->
+
 </body>
 </html>
