--- a/cart.html
+++ b/cart.html
@@ -96,7 +96,7 @@
 				<div class="container-fluid">
 					<!--logo -->
 
-					<a class="navbar-brand" href="index.html"><img ng-src="{{'/'+ MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
+					<a class="navbar-brand" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
