--- a/register-login.html
+++ b/register-login.html
@@ -57,7 +57,7 @@
 <body ng-controller="ctrlCubeShopLoginRegister">
 	<div class="sticky-top">
 
-		<nav class="top-menu sticky-top">
+		<nav class="top-menu sticky-top" ng-style="{'background-color':1 == 1 ?  MasterInfo[0].BackColor: MasterInfo[0].BackColor}"/>
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-right">
