--- a/creditcard-address.html
+++ b/creditcard-address.html
@@ -57,7 +57,7 @@
 <body ng-controller="ctrlCubeShopHomeShippingCardInformation">
 	<div class="sticky-top">
 
-		<nav class="top-menu sticky-top">
+		<nav class="top-menu sticky-top" ng-style="{'background-color':1 == 1 ?  MasterInfo[0].BackColor: MasterInfo[0].BackColor}"/>
 			<div class="container-fluid">
 				<div class="row">
 
@@ -81,7 +81,7 @@
                 </li>
 
 
-								<li class="carrito"><a  href="cart.html">
+								<li class="carrito" ng-style="{'background-color':1 == 1 ?  MasterInfo[0].BackColor: MasterInfo[0].BackColor}"><a  href="cart.html">
 									<i class="fas fa-cart-plus"></i> My Cart
 									<span class="badge badge-cart "> {{myCart.length}}</span>
 								</a></li>
