--- a/index.html
+++ b/index.html
@@ -152,21 +152,17 @@
           <br> <br>
           <div ><h3 class="text-center">PRODUCTS</h3></div>
           <br>
-          <div class="">
-            <div  class="row"  ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'" style="margin-bottom:20px;">
-              <div class="card-deck">
+            <div class="card-group"  ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'" style="margin-bottom:20px;">
                 <div ng-repeat="ProductCardsItem in value" class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
-                  <div style="height:300px" class="card">
+                  <div class="card">
                     <img class="card-img-top" ng-src="{{ProductCardsItem.CATIMAGE}}" alt="Card image cap">
                     <div class="card-body">
                       <a ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" href="#"><h5 class="card-title">{{ProductCardsItem.NAME}}</h5></a>
                     </div>
                   </div>
                 </div>
-              </div>
 
             </div>
-          </div>
 
           </div>
         <br><br>
