--- a/details-product.html
+++ b/details-product.html
@@ -72,7 +72,7 @@
 										<i class="fas fa-user" aria-hidden="true"></i> My Account
 									</a>
 									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#" style="color:#5A6268;">Close sesion</a>
+										<a class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
 									</div>
 								</li>
 
